force-app/main/default/objects/ClanWarLeagueGroup__c/ClanWarLeagueGroup__c.object-meta.xml
<CustomObject>
    <label>Clan War League Group</label>
    <nameField>
        <label>Clan War League Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Clan War League Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>