force-app/main/default/objects/ClanWarLeagueGroup__c/fields/InitiatingClanTag__c.field-meta.xml
<CustomField>
    <fullName>InitiatingClanTag__c</fullName>
    <description>This is needed to differentiate clan war league groups since the tag is not available in the preparation state</description>
    <externalId>true</externalId>
    <label>Initiating Clan Tag</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>