force-app/main/default/objects/ClanWarLeagueGroup__c/fields/Season__c.field-meta.xml
<CustomField>
    <fullName>Season__c</fullName>
    <label>Season</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>