force-app/main/default/objects/ClanWarLeagueGroup__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>groupNotFound</fullName>
            </value>
            <value>
                <fullName>notInWar</fullName>
            </value>
            <value>
                <fullName>preparation</fullName>
            </value>
            <value>
                <fullName>war</fullName>
            </value>
            <value>
                <fullName>ended</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>