force-app/main/default/objects/ClanWarLeagueGroup__c/fields/UniqueKey__c.field-meta.xml
<CustomField>
    <fullName>UniqueKey__c</fullName>
    <description>initiating clan tag + season</description>
    <externalId>true</externalId>
    <label>Unique Key</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>